<resources>
    <string name="app_name">Ceylon Express</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CEYLON EXPRESS</string>
    <string name="nav_header_subtitle">www.ceylonexpress.lk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="Dont_have_Acc">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="newpassword">New password</string>
    <string name="forgetpasword">Forgot password?</string>
    <string name="uname">User Name</string>
    <string name="fname">Full name</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="letsgo">Let\'s Go</string>
    <string name="thankyou">Thank you</string>
    <string name="success">Your CEYLON EXPRESS account is successfully created!</string>
    <string name="title_activity_deals">deals</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="number">Mobile Number</string>
    <string name="reset">Reset</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="coupons">Coupons</string>
    <string name="wishlist">Wish list</string>
    <string name="toberev">To be reviewed</string>
    <string name="wallet">Wallet</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="qanda">Question and Answer</string>
    <string name="settings">Settings</string>
    <string name="tobeship">To be shipped</string>
    <string name="shipped">Shipped</string>
    <string name="help">Help Center</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>

    <string name="add_name">Sample Add Name</string>
    <string name="add_location">Sample Location</string>
    <string name="add_type">Sample Type</string>
    <string name="add_date">Sample Date</string>

    <string name="itm_name">Item Name</string>
    <string name="district">District</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="post_add">Post Now</string>
    <string name="clear">Clear</string>
    <string name="photo">Photo</string>
    <string name="image">Image</string>
    <string name="city">City</string>

    <string-array name="district_list">
        <item>Colombo</item>
        <item>Gampaha</item>
        <item>Kaluthara</item>
        <item>Hambantota</item>
        <item>Mathara</item>
        <item>Galle</item>
        <item>Kandy</item>
        <item>Nuwara Eliya</item>
        <item>Kegalle</item>
    </string-array>
</resources>
