<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Postadd_Activity">
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/tvuname"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/itm_name"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />
    <EditText
        android:id="@+id/etitem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textColor="@color/colorDivider"
        android:textSize="18sp"
        android:hint="iphone 5s Black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/photo"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <ImageView
            android:id="@+id/ivphoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_photo_library_black_24dp"
            />
        <Button
            android:id="@+id/btnphoto"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:text="@string/image"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/colorDivider"
            android:background="@drawable/rounded_buttton"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:visibility="gone"
        android:id="@+id/loading"
        />
    <EditText
        android:id="@+id/etdescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:textColor="@color/colorDivider"
        android:textSize="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/district"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            />
        <Spinner
            android:id="@+id/spndistrict"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:entries="@array/district_list"
            android:layout_height="match_parent">
        </Spinner>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.15"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/city"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        />
    <EditText
        android:id="@+id/etcity"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textColor="@color/colorDivider"
        android:textSize="18sp"
        android:hint="Maradana"
        />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:id="@+id/tvdate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btnclear"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:text="@string/clear"
        android:backgroundTint="@color/red"
        android:background="@drawable/rounded_buttton"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:onClick="Clear"
    />
    <Button
        android:id="@+id/btnpostnow"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/post_add"
        android:backgroundTint="@color/green"
        android:background="@drawable/rounded_buttton"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:onClick="PostAdd"
        />
    </LinearLayout>
</LinearLayout>