<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Register_Activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:scaleType="fitCenter"
        android:src="@drawable/logos" />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:visibility="gone"
        android:id="@+id/loading"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/username"/>

        <EditText
            android:id="@+id/etresetUname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginRight="40dp"
            android:gravity="bottom"
            android:hint="@string/uname"
            android:textColor="@color/colorDivider"
            android:textColorHint="@color/colorHint"
            android:backgroundTint="@color/colorDivider"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/email"/>
        <EditText
            android:id="@+id/etresetEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginRight="40dp"
            android:gravity="bottom"

            android:hint="@string/email"
            android:textColor="@color/colorDivider"
            android:textColorHint="@color/colorHint"
            android:backgroundTint="@color/colorDivider"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/password"/>
        <EditText
            android:id="@+id/etresetPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginRight="40dp"
            android:gravity="bottom"
            android:hint="@string/newpassword"
            android:textColor="@color/colorDivider"
            android:textColorHint="@color/colorHint"
            android:backgroundTint="@color/colorDivider"
            android:inputType="textPassword"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/password"/>
        <EditText
            android:id="@+id/etresetConpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginRight="40dp"
            android:gravity="bottom"

            android:backgroundTint="@color/colorDivider"
            android:hint="@string/confirmpass"
            android:inputType="textPassword"
            android:textColor="@color/colorDivider"
            android:textColorHint="@color/colorHint"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnresetpassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/save"
                android:background="@drawable/rounded_buttton"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:onClick="reset"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>