<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDivider"
    android:padding="10dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/logomain"
        android:scaleType="fitCenter"
        android:padding="50dp"
        />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:visibility="gone"
        android:id="@+id/loading"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/etUname"
        android:layout_weight="1"
        android:hint="@string/username"
        android:gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorSecondaryText"
        android:backgroundTint="@color/colorText"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:id="@+id/etPword"
        android:hint="@string/password"
        android:gravity="bottom"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColorHint="@color/colorSecondaryText"
        android:backgroundTint="@color/colorText"
        android:textColor="@color/colorText"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:padding="10sp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnsignin"
                android:layout_margin="5dp"
                android:layout_weight="2"

                android:background="@drawable/rounded_buttton"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:backgroundTint="@color/colorText"
                android:textColor="@color/colorLightPrimary"
                android:textSize="18sp"
                android:onClick="signIn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="New user? Register now"
        android:textColor="@color/colorSecondaryText"
        android:textAlignment="center"
        android:textSize="14sp"
        android:id="@+id/tvRegister"
        android:onClick="openReg"
        />
</LinearLayout>