<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile_Activity">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorDivider"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_person_black_24dp"
            android:gravity="bottom"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="2"
            android:gravity="bottom"
            android:text="@string/username"
            android:textColor="@color/colorText"
            android:textSize="28sp" />

    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/fname"
            android:textSize="18sp"
            android:gravity="bottom"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:padding="9dp"
                android:src="@drawable/fullname"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="35dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/fname"
                android:textSize="20sp" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/email"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:padding="9dp"
                android:src="@drawable/email"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="35dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/fname"
                android:textSize="20sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/number"
            android:textSize="18sp"
            android:gravity="bottom"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:padding="9dp"
                android:src="@drawable/number"/>

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="35dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/fname"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/colorDivider"
        android:orientation="horizontal"
        >
    </LinearLayout>
</LinearLayout>